# Software

./: .gitignore  .gitmodules  set_ros_ip.sh
catkin_ws/src/00-infrastructure/duckietown_msgs/: CMakeLists.txt
catkin_ws/src/00-infrastructure/duckietown_msgs/msg/: Twist2DStamped.msg
catkin_ws/src/100-almightly-duckiebot/agv/launch/: joystick.launch  joystick_odom.launch  odom_rviz.launch  test.launch
catkin_ws/src/100-almightly-duckiebot/agv_joy_mapper/src/: agv_joy_mapper_node.py
catkin_ws/src/100-almightly-duckiebot/agv_odometry_map/: CMakeLists.txt  package.xml
catkin_ws/src/100-almightly-duckiebot/agv_odometry_map/launch/: agv_hector_odometry.launch  agv_pcl_odometry.launch  agv_pcl_preprocess.launch  agv_wheel_odometry.launch
catkin_ws/src/100-almightly-duckiebot/agv_odometry_map/src/: hector_odometry_node.py  pcl_odometry_node.cpp  pcl_preprocess_node.cpp  tragedy.cpp  wheel_odometry_node.cpp
catkin_ws/src/100-almightly-duckiebot/agv_wheel_driver/launch/: agv_wheel_driver.launch
catkin_ws/src/100-almightly-duckiebot/agv_wheel_driver/src/: pulse.py  (+1 more)
catkin_ws/src/100-almightly-duckiebot/almightly_wheel_driver/: CMakeLists.txt  package.xml
catkin_ws/src/100-almightly-duckiebot/r200_avoidance/: CMakeLists.txt  package.xml
catkin_ws/src/100-almightly-duckiebot/test/: CMakeLists.txt  package.xml
catkin_ws/src/100-almightly-duckiebot/velodyne_slam/: CMakeLists.txt  package.xml
catkin_ws/src/100-almightly-duckiebot/velodyne_slam/launch/: velodyne_mapping.launch
catkin_ws/src/100-almightly-duckiebot/velodyne_slam/src/: lidarMapping.cpp
(+75 files in other folders)
